creusot/tests/should_fail/prusti/blocked_lifetime/curr_lifetime.stderr
error[creusot]: 'curr region must not be blocked
 --> curr_lifetime.rs:5:4
  |
5 | fn simple<'curr>(x: &'curr mut u32) -> &'curr mut u32 {
  |    ^^^^^^

error: aborting due to previous error

